Upgrade Quarkus.