@@ -6,6 +6,7 @@
   <groupId>hrytsenko</groupId>
   <artifactId>quarkus-json-data</artifactId>
   <version>1.0</version>
+  <packaging>quarkus</packaging>
 
   <properties>
     <maven.compiler.release>25</maven.compiler.release>
@@ -13,9 +14,8 @@
     <surefire-plugin.version>3.5.4</surefire-plugin.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-    <quarkus.platform.version>3.30.4</quarkus.platform.version>
+    <quarkus.platform.version>3.32.2</quarkus.platform.version>
     <nitrite.version>4.3.2</nitrite.version>
     <lombok.version>1.18.42</lombok.version>
   </properties>
@@ -24,7 +24,7 @@
     <dependencies>
       <dependency>
         <groupId>${quarkus.platform.group-id}</groupId>
-        <artifactId>${quarkus.platform.artifact-id}</artifactId>
+        <artifactId>quarkus-bom</artifactId>
         <version>${quarkus.platform.version}</version>
         <type>pom</type>
         <scope>import</scope>
@@ -85,7 +85,7 @@
     <dependency>
       <groupId>net.javacrumbs.json-unit</groupId>
       <artifactId>json-unit-assertj</artifactId>
-      <version>5.0.0</version>
+      <version>5.1.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -116,15 +116,6 @@
             --sun-misc-unsafe-memory-access=allow
           </jvmArgs>
         </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>build</goal>
-              <goal>generate-code</goal>
-              <goal>generate-code-tests</goal>
-            </goals>
-          </execution>
-        </executions>
       </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -144,13 +135,11 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${surefire-plugin.version}</version>
         <configuration>
+          <argLine>@{argLine} -XX:+EnableDynamicAgentLoading</argLine>
           <systemPropertyVariables>
             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
             <maven.home>${maven.home}</maven.home>
           </systemPropertyVariables>
-          <argLine>
-            --add-opens java.base/java.lang=ALL-UNNAMED
-          </argLine>
         </configuration>
       </plugin>
     </plugins>
